Update Firebase configuration details
Updated Firebase configuration with new project settings.

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
         // --- Firebase Configuration ---
         // ここをご自身のFirebase設定値に書き換えてください
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+  apiKey: "AIzaSyAj-lPXDJxGjTjPwif1fdorGxjn9tRya10",
+  authDomain: "my-circle-game.firebaseapp.com",
+  projectId: "my-circle-game",
+  storageBucket: "my-circle-game.firebasestorage.app",
+  messagingSenderId: "78412190070",
+  appId: "1:78412190070:web:e3c2706287475e6baa2a57",
+  measurementId: "G-8FPJH7T70H"
+};
+
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
